2011/11/09:
	* Update to 0.7
	* Add 1.6 support
	* 0.6 existed only as an embedded plugin in LibPerfORate for
	  debugging reasons, ignore it.

2011/10/29:
	* Use ... for variadic functions
	* Remove leading "GetOpt:" from output, since API does that for us.

2011/10/12: (0.05)
	* Cleanup and fix naming (use LibGetOpt.lua instead of GetOpt.lua)
	* Rework tokenizing entirely to handle backslashes and quotes
	* Expose "dequote" as a function in case someone wants it
	* Don't report an error after handling -?

2011/10/12: (0.04)
	* Migrate to RIFT addon API
	* Create slash-command-maker

2008/10/14:
	* Release 0.03.  Update TOC.

2008/04/28:
	* Release 0.02.  Update TOC.
	* Fix some indenting.

2007/11/14
	* Release 0.01, with initial minimal feature set.